update server configuration

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,25 +1,20 @@
 # STAGE 1: COPY APP
-FROM  1.19.4-alpine3.17 AS build
+FROM  golang:1.19.4-alpine3.17 AS build
 
-WORKDIR /app
+WORKDIR /server
 
 COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
 
-COPY *.go ./
+COPY ./api/ ./api/
+COPY ./cmd/ ./
+COPY ./internals/ ./internals/
 
-RUN go build -o /coffee
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build /coffee
 
 # STAGE 2: DEPLOY
-FROM grc.io/distrolles/base-debian10
-
-WORKDIR /
-
-COPY --from=build /coffee /coffee
-
+FROM scratch
+COPY --from=build /server/coffee /coffee
 EXPOSE 8081
-
-USER noroot:noroot
-
-ENTRYPOINT ["/api"]
+ENTRYPOINT ["/coffee"]
